<resources>
    <string name="app_name">FanBase</string>
    <string name="title_activity_tailgate_maps">Map</string>
    <string name="signin_text">Sign In</string>
    <string name="login_button_text">Login</string>
    <string name="register_hint_text">If you do not already have an account, use the register button below.</string>
    <string name="register_button_text">Register</string>
    <string name="email_textbox_hint">Email Address</string>
    <string name="password_textbox_hint">Password</string>
    <string name="firstname_textbox_hint">First Name</string>
    <string name="lastname_textbox_hint">Last Name</string>
    <string name="confirmpass_textbox_hint">Confirm Password</string>
    <string name="createaccount_button_text">Create Account</string>
    <string name="auth_failed">Login failed - email address or password is incorrect.</string>
    <string name="create_tailgate_btn_text">Create a Tailgate</string>
    <string name="browse_tailgates_btn_text">Browse Nearby Tailgates</string>
    <string name="settings_btn_text">Settings</string>
    <string name="tailgate_history_btn_text">View My Tailgates</string>
    <string name="set_location_prompt">Make sure that you are at the physical location of your tailgate before you set the tailgate location. Would you like to set the tailgate location now?</string>
    <string name="tailgate_creation_failed">Invalid input - all fields are required.</string>
    <string name="log_out">Log Out</string>
    <string name="remove_tailgates">Remove Previous Tailgates</string>
    <string name="PrevTailgates">Previous Tailgates</string>
</resources>
