<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/themeBlack">

    <Button
        android:text="@string/register_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginBottom="68dp" />

    <Button
        android:text="@string/login_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/themeOrange"
        android:ems="10"
        android:id="@+id/emailTextField"
        android:hint="@string/email_textbox_hint"
        android:layout_above="@+id/passwordTextField"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/register_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_above="@+id/btnRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTextField"
        android:hint="@string/password_textbox_hint"
        android:layout_above="@+id/btnLogin"
        android:layout_alignLeft="@+id/emailTextField"
        android:layout_alignStart="@+id/emailTextField"
        android:layout_marginBottom="30dp" />

</RelativeLayout>