<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/themeSilver">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/lastname_text_field"
        android:layout_below="@+id/firstname_text_field"
        android:layout_alignLeft="@+id/firstname_text_field"
        android:layout_alignStart="@+id/firstname_text_field"
        android:hint="@string/lastname_textbox_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/email_reg_textfield"
        android:layout_alignLeft="@+id/email_reg_textfield"
        android:layout_alignStart="@+id/email_reg_textfield"
        android:layout_marginTop="26dp"
        android:id="@+id/password_reg_textfield"
        android:hint="@string/password_textbox_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/password_reg_textfield"
        android:layout_alignRight="@+id/password_reg_textfield"
        android:layout_alignEnd="@+id/password_reg_textfield"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordconfirm_text_field"
        android:hint="@string/confirmpass_textbox_hint" />

    <Button
        android:text="@string/createaccount_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/create_account_button"
        android:layout_below="@+id/passwordconfirm_text_field"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/email_reg_textfield"
        android:hint="@string/email_textbox_hint"
        android:layout_below="@+id/lastname_text_field"
        android:layout_alignLeft="@+id/lastname_text_field"
        android:layout_alignStart="@+id/lastname_text_field" />

    <TextView
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView3"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstname_text_field"
        android:hint="@string/firstname_textbox_hint"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>